WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167679
Simple line layout: Do not assert on zero length/width trailing whitespace.
https://bugs.webkit.org/show_bug.cgi?id=167679
Summary
Simple line layout: Do not assert on zero length/width trailing whitespace.
alan
Reported
2017-01-31 18:08:36 PST
font-size: 0 could produce zero width trailing whitespace.
Attachments
Patch
(1.93 KB, patch)
2017-01-31 18:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-01-31 18:29:17 PST
Created
attachment 300293
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-31 19:20:48 PST
Comment on
attachment 300293
[details]
Patch Clearing flags on attachment: 300293 Committed
r211466
: <
http://trac.webkit.org/changeset/211466
>
WebKit Commit Bot
Comment 3
2017-01-31 19:20:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug