Simple line layout: Do not assert on zero length/width trailing whitespace. https://bugs.webkit.org/show_bug.cgi?id=167679

Reviewed by Simon Fraser.

It's valid to have an zero length/width trailing whitespace.

Covered by existing tests.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::LineState::removeTrailingWhitespace): Zero length -> nothing to do.
Zero width with length > 0 (font-size: 0) -> remove trailing run.


Canonical link: https://commits.webkit.org/184705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211466 268f45cc-cd09-0410-ab3c-d52691b4dbfc